fixed loading issue and alignment

--- a/app/styles/styles.scss
+++ b/app/styles/styles.scss
@@ -13,7 +13,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
-  font-size: 1vw;
+  font-size: .7vw;
   line-height: normal;
 }
 
